namespace Assets.Scripts
{
    public static class Layers
    {
        public static readonly string Lader = "Lader";
        public static readonly string Ground = "Ground";
        public static readonly string Water = "Water";
    }
    
    public static class Animations
    {
        public static readonly string Attack = "Attack";
        public static readonly string Running = "isRunning";
        public static readonly string Jumping = "isJumping";
        public static readonly string Alive = "isAlive";
        public static readonly string Moving = "isMoving";
    }

    public static class Tags
    {
        public static readonly string Player = "Player";
        public static readonly string Lader = "Lader";
        public static readonly string Ground = "Ground";
        public static readonly string Kill = "Kill";
        public static readonly string Water = "Water";
        public static readonly string Bounce = "Bounce";
        public static readonly string Orb = "Orb";
    }

    public static class Constants
    {
        public static readonly string EnemyHealthBar = "HealthBar";
    }
}
